2007-05-11  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Jeroen Wouters <woutersj at gmail com>

	* gst/gsturi.c: (gst_uri_get_protocol), (search_by_entry):
	  Treat protocol strings in a case-insensitive way (#437563).

2007-05-11  Michael Smith <msmith@fluendo.com>

	* gst/gstplugin.c: (gst_plugin_load_file):
	* gst/gstregistry.c: (gst_registry_scan_path_level):
	  Don't print a g_warning for any failure to load a shared object.
	  Instead, push this down into gstplugin.c, and warn _only_ if we
	  failed to open the module (i.e. failure to link).
	  Avoids warnings on normal, working, non-plugin .so files.

2007-05-11  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstplugin.c (gst_plugin_load_file):
	* gst/gstregistry.c (GST_CAT_DEFAULT,
	  gst_registry_lookup_feature_locked, gst_registry_scan_path_level):
	  Print a g_warning if there was an error when loading a plugins during
	  registry scan. The shuld help beginners starting with gst-plugin
	  template.

2007-05-10  Wim Taymans  <wim@fluendo.com>

	* plugins/elements/gstqueue.c: (gst_queue_class_init),
	(update_time_level), (gst_queue_locked_flush),
	(gst_queue_handle_sink_event), (gst_queue_chain),
	(gst_queue_push_one), (gst_queue_loop):
	* plugins/elements/gstqueue.h:
	Be smarter when calculating the current amount of data in the queue by
	measuring the difference between start and end timestamps (in running
	time) inside the queue. Fixes #432876.
	API: GstQueue::pushing to notify elements that we are pushing data again
	since the running signal is rather broken for this purpose.

2007-05-10  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstqueue.c (_do_init, gst_queue_signals,
	  gst_queue_base_init, gst_queue_init):
	  use GST_BOILERPLATE

2007-05-09  Sebastien Moutte  <sebastien@moutte.net>

	* win32/common/libgstreamer.def:
	Add new exported functions.
	* win32/vs6/grammar.dsp:
	Use grammar pre-generated files.

2007-05-09  Tim-Philipp Müller  <tim at centricular dot net>
