@@ -22,6 +22,7 @@ gststructure
 gstsystemclock
 gsttag
 gsttagsetter
+gsturi
 gstutils
 gstvalue
 gstquery
