@@ -1,5 +1,15 @@
 2007-05-11  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* gst/gsturi.c: (gst_element_make_from_uri):
+	  Don't leak plugin feature.
+
+	* tests/check/Makefile.am:
+	* tests/check/gst/.cvsignore:
+	* tests/check/gst/gsturi.c: (GST_START_TEST), (gst_uri_suite):
+	  Add brain-dead unit test.
+
+2007-05-11  Tim-Philipp Müller  <tim at centricular dot net>
+
 	Patch by: Jeroen Wouters <woutersj at gmail com>
 
 	* gst/gsturi.c: (gst_uri_get_protocol), (search_by_entry):
